[package]
name = "uuinfo"
version = "0.1.0"
edition = "2021"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
license = "MIT"
description = "..."
readme = "README.md"
keywords = ["uuid", "unique", "identifier", "debug", "database"]
categories = ["command-line-utilities", "development-tools::debugging", "encoding", "data-structures"]
homepage = "https://github.com/racum/uuinfo"
repository = "https://github.com/racum/uuinfo"
documentation = "https://docs.rs/uuinfo"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
short-uuid = "0.1.3"
ulid = "1.1.3"
uuid = "1.11.0"
upid = "0.2.0"
ksuid = "0.2.0"
timeflake-rs = "0.3.0"
base62 = "2.0.3"
colored = "2.1.0"
base32 = "0.5.1"
byteorder = "1.5.0"
basen = "0.1.0"
