[package]
name = "uuinfo"
version = "0.3.10"
edition = "2021"
authors = ["Ronaldo Racum <ronaldo@racum.com>"]
license = "BSD-3-Clause"
description = "A tool to debug unique identifiers (UUID, ULID, Snowflake, etc)."
readme = "README.md"
keywords = ["uuid", "unique", "identifier", "debug", "database"]
categories = ["command-line-utilities", "development-tools::debugging", "encoding", "data-structures"]
homepage = "https://github.com/racum/uuinfo"
repository = "https://github.com/racum/uuinfo"
exclude = [
    "assets/*",
    "docker/*",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
short-uuid = "0.1.3"
ulid = { version = "1.1.3", features = ["uuid"] }
uuid = "1.11.0"
upid = "0.2.0"
timeflake-rs = "0.3.0"
base62 = "2.0.3"
colored = "3.0.0"
base32 = "0.5.1"
basen = "0.1.0"
cuid2 = "0.1.3"
scru128 = "3.1.0"
scru64 = "2.0.1"
uuid25 = "0.3.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tsid = "0.3.1"
sqids = "0.4.2"
base58 = "0.2.0"
hash-ids = "0.3.1"
resize-slice = "0.1.3"  # Used by custom_base62
cid = "0.11.1"
mac_address = "1.1.7"
isbn = "0.4.0"
