[package]
name = "uuinfo"
version = "0.7.2"
edition = "2024"
authors = ["Ronaldo Ferreira <ronaldo@racum.com>"]
license = "BSD-3-Clause"
description = "Tool to debug unique identifiers (UUID, ULID, Snowflake, etc)"
readme = "README.md"
keywords = ["uuid", "unique", "identifier", "debug", "database"]
categories = ["command-line-utilities", "development-tools::debugging", "encoding", "data-structures"]
homepage = "https://github.com/racum/uuinfo"
repository = "https://github.com/racum/uuinfo"
exclude = [
    "assets/*",
    "draft/*",
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
short-uuid = "0.2.0"
ulid = { version = "1.2.1", features = ["uuid"] }
uuid = "1.23.1"
upid = "0.3.1"
timeflake-rs = "0.3.0"
base62 = "2.2.4"
colored = "3.1.1"
base32 = "0.5.1"
basen = "0.1.0"
cuid2 = "0.1.6"
scru128 = "4.1.0"
scru64 = "2.0.1"
uuid25 = "0.3.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqids = "0.4.2"
base58 = "0.2.0"
hash-ids = "0.3.1"
resize-slice = "0.1.3"  # Used by custom_base62
cid = "0.11.3"
mac_address = "1.1.8"
isbn = "0.8.20260511"
imei = "=1.1.1"
h3ron = "0.18.0"
tsid = "0.3.4"
timediff = "0.2.3"
regex = "1.12.3"
sha2 = "0.11.0"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }

[lints.clippy]
indexing_slicing = "deny"
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
must_use_candidate = "deny"

[package.metadata.deb]
maintainer = "Ronaldo Ferreira <ronaldo@racum.com>"
copyright = "2025, Ronaldo Ferreira"
license-file = ["LICENSE.md", "0"]
extended-description = "Tool to debug unique identifiers (UUID, ULID, Snowflake, etc)"
depends = ""
section = "utils"
priority = "optional"
assets = [
    ["target/release/uuinfo", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/uuinfo/README.md", "644"],
]
